feat: initiate models

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=root
-DB_DATABASE=be-talent-db
+DB_DATABASE=app
 NODE_ENV=development
 HOST=localhost
 LOG_LEVEL=debug
