--- a/package.json
+++ b/package.json
@@ -44,25 +44,31 @@
     "@swc/core": "^1.6.5",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20.14.9",
+    "@types/source-map-support": "^0.5.10",
     "eslint": "^8.57.0",
+    "execa": "^5.1.1",
+    "get-port": "^5.1.1",
     "hot-hook": "^0.2.6",
+    "japa": "^4.0.0",
     "pino-pretty": "^11.2.1",
     "prettier": "^3.3.2",
+    "sqlite3": "^5.1.7",
     "ts-node": "^10.9.2",
     "typescript": "~5.4"
   },
   "dependencies": {
     "@adonisjs/auth": "^9.2.3",
-    "@adonisjs/core": "^6.12.1",
+    "@adonisjs/core": "^6.14.1",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^21.1.0",
     "@types/jsonwebtoken": "^9.0.6",
     "@vinejs/vine": "^2.1.0",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
-    "luxon": "^3.4.4",
-    "mysql2": "^3.10.2",
-    "reflect-metadata": "^0.2.2"
+    "luxon": "^3.5.0",
+    "mysql2": "^3.11.4",
+    "reflect-metadata": "^0.2.2",
+    "source-map-support": "^0.5.21"
   },
   "hotHook": {
     "boundaries": [
