refactor: inser try catch, change the validator end jwt still does not work

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "rootDir": "./",
     "outDir": "./build",
     "moduleResolution": "node16",
-    "baseUrl": "./beTalentProject", // Adicione esta linha
+    "baseUrl": "./beTalentProject",
     "paths": {
       "@ioc:Adonis/Core/*": ["node_modules/@adonisjs/core/build/src/*"]
     }
